--- a/PAGINA WEB/about.html
+++ b/PAGINA WEB/about.html
@@ -25,7 +25,7 @@
 <body>
     <!-- ***** Preloader Start ***** -->
     <div id="preloader">
-        <div class="mosh-preloader"></div>
+        <div class="matilau-preloader"></div>
     </div>
 
     <!-- ***** Header Area Start ***** -->
@@ -40,14 +40,14 @@
                             <a class="navbar-brand" href="index.html"><img src="img/core-img/logo.png" alt="logo"></a>
 
                             <!-- Menu Area -->
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mosh-navbar" aria-controls="mosh-navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#matilau-navbar" aria-controls="matilau-navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
-                            <div class="collapse navbar-collapse justify-content-end" id="mosh-navbar">
+                            <div class="collapse navbar-collapse justify-content-end" id="matilau-navbar">
                                 <ul class="navbar-nav animated" id="nav">
                                     <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="moshDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
-                                        <div class="dropdown-menu" aria-labelledby="moshDropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="matilauDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
+                                        <div class="dropdown-menu" aria-labelledby="matilauDropdown">
                                             <a class="dropdown-item" href="index.html">Home</a>
                                             <a class="dropdown-item" href="about.html">About Us</a>
                                             <a class="dropdown-item" href="services.html">Services</a>
@@ -90,7 +90,7 @@
     <!-- ***** Header Area End ***** -->
 
     <!-- ***** Breadcumb Area Start ***** -->
-    <div class="mosh-breadcumb-area" style="background-image: url(img/core-img/breadcumb.png);">
+    <div class="matilau-breadcumb-area" style="background-image: url(img/core-img/breadcumb.png);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -110,21 +110,21 @@
     <!-- ***** Breadcumb Area End ***** -->
 
     <!-- ***** About Us Area Start ***** -->
-    <section class="mosh-aboutUs-area section_padding_100_0">
+    <section class="matilau-aboutUs-area section_padding_100_0">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 col-md-6">
-                    <div class="mosh-about-us-content">
+                    <div class="matilau-about-us-content">
                         <div class="section-heading">
                             <p>Features</p>
                             <h2>What you get if you start your business with us</h2>
                         </div>
                         <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mat tis effic iturut magna. Pellentesque sit amet tellus blandit. Etiam nec odio ves tibul. Nec odio vestibulum est mattis effic iturut magna. Pellente sque sita met tellus blandit. Etiam nec odio. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mat tis effic iturut magna.</p>
-                        <a href="#" class="btn mosh-btn mt-50">Read More</a>
+                        <a href="#" class="btn matilau-btn mt-50">Read More</a>
                     </div>
                 </div>
                 <div class="col-12 col-md-6">
-                    <div class="mosh-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
                         <img src="img/bg-img/headpiece.png" alt="">
                     </div>
                 </div>
@@ -134,18 +134,18 @@
     <!-- ***** About Us Area End ***** -->
 
     <!-- ***** Features Area Start ***** -->
-    <section class="mosh-about-features-area section_padding_100">
+    <section class="matilau-about-features-area section_padding_100">
         <div class="container">
             <div class="row align-items-center">
 
                 <div class="col-12 col-md-4">
-                    <div class="mosh-features-thumb wow fadeIn" data-wow-delay="0.5s">
+                    <div class="matilau-features-thumb wow fadeIn" data-wow-delay="0.5s">
                         <img src="img/bg-img/features-2.png" alt="">
                     </div>
                 </div>
 
                 <div class="col-12 col-md-8">
-                    <div class="mosh-about-us-content">
+                    <div class="matilau-about-us-content">
                         <div class="section-heading">
                             <p>Features</p>
                             <h2>Fun facts about the team and why people love us</h2>
@@ -200,7 +200,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="#" class="btn mosh-btn mt-50">Read More</a>
+                        <a href="#" class="btn matilau-btn mt-50">Read More</a>
                     </div>
                 </div>
             </div>
@@ -237,7 +237,7 @@
     <!-- ***** Few Words Area End ***** -->
 
     <!-- ***** Team Area Start ***** -->
-    <section class="mosh-team-area section_padding_100">
+    <section class="matilau-team-area section_padding_100">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-10">
@@ -251,7 +251,7 @@
 
             <div class="row">
                 <div class="col-12">
-                    <div class="mosh-team-slides owl-carousel">
+                    <div class="matilau-team-slides owl-carousel">
                         <!-- Single Team Slide -->
                         <div class="single-team-slide text-center">
                             <!-- Thumbnail -->
@@ -339,7 +339,7 @@
     </section>
     <!-- ***** Features Area Start ***** -->
 
-    <section class="mosh-subscribe-newsletter-area bg-img bg-overlay-white section_padding_100" style="background-image: url(img/bg-img/sub-1.jpg);">
+    <section class="matilau-subscribe-newsletter-area bg-img bg-overlay-white section_padding_100" style="background-image: url(img/bg-img/sub-1.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-12">
