--- a/PAGINA WEB/blog.html
+++ b/PAGINA WEB/blog.html
@@ -25,7 +25,7 @@
 <body>
     <!-- ***** Preloader Start ***** -->
     <div id="preloader">
-        <div class="mosh-preloader"></div>
+        <div class="matilau-preloader"></div>
     </div>
 
     <!-- ***** Header Area Start ***** -->
@@ -40,14 +40,14 @@
                             <a class="navbar-brand" href="index.html"><img src="img/core-img/logo.png" alt="logo"></a>
 
                             <!-- Menu Area -->
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mosh-navbar" aria-controls="mosh-navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#matilau-navbar" aria-controls="matilau-navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
-                            <div class="collapse navbar-collapse justify-content-end" id="mosh-navbar">
+                            <div class="collapse navbar-collapse justify-content-end" id="matilau-navbar">
                                 <ul class="navbar-nav animated" id="nav">
                                     <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="moshDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
-                                        <div class="dropdown-menu" aria-labelledby="moshDropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="matilauDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
+                                        <div class="dropdown-menu" aria-labelledby="matilauDropdown">
                                             <a class="dropdown-item" href="index.html">Home</a>
                                             <a class="dropdown-item" href="about.html">About Us</a>
                                             <a class="dropdown-item" href="services.html">Services</a>
@@ -90,7 +90,7 @@
     <!-- ***** Header Area End ***** -->
 
     <!-- ***** Breadcumb Area Start ***** -->
-    <div class="mosh-breadcumb-area" style="background-image: url(img/core-img/breadcumb.png);">
+    <div class="matilau-breadcumb-area" style="background-image: url(img/core-img/breadcumb.png);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -114,7 +114,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-8">
-                    <div class="mosh-blog-posts">
+                    <div class="matilau-blog-posts">
                         <div class="row">
                             <!-- Single Blog Start -->
                             <div class="col-12">
@@ -191,7 +191,7 @@
                         </div>
                     </div>
                     <!-- Pagination Area Start -->
-                    <div class="mosh-pagination-area">
+                    <div class="matilau-pagination-area">
                         <nav>
                             <ul class="pagination">
                                 <li class="page-item active"><a class="page-link" href="#">1.</a></li>
@@ -203,7 +203,7 @@
                 </div>
 
                 <div class="col-12 col-md-4">
-                    <div class="mosh-blog-sidebar">
+                    <div class="matilau-blog-sidebar">
 
                         <div class="blog-post-search-widget mb-100">
                             <form action="#">
