--- a/PAGINA WEB/index.html
+++ b/PAGINA WEB/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>Mosh - Creative Business Template | Home</title>
+    <title>Juego Pagina Principal</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -25,7 +24,7 @@
 <body>
     <!-- ***** Preloader Start ***** -->
     <div id="preloader">
-        <div class="mosh-preloader"></div>
+        <div class="matilau-preloader"></div>
     </div>
 
     <!-- ***** Header Area Start ***** -->
@@ -40,14 +39,14 @@
                             <a class="navbar-brand" href="index.html"><img src="img/core-img/logo.png" alt="logo"></a>
 
                             <!-- Menu Area -->
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mosh-navbar" aria-controls="mosh-navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#matilau-navbar" aria-controls="matilau-navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
-                            <div class="collapse navbar-collapse justify-content-end" id="mosh-navbar">
+                            <div class="collapse navbar-collapse justify-content-end" id="matilau-navbar">
                                 <ul class="navbar-nav animated" id="nav">
                                     <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="moshDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
-                                        <div class="dropdown-menu" aria-labelledby="moshDropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="matilauDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
+                                        <div class="dropdown-menu" aria-labelledby="matilauDropdown">
                                             <a class="dropdown-item" href="index.html">Home</a>
                                             <a class="dropdown-item" href="about.html">About Us</a>
                                             <a class="dropdown-item" href="services.html">Services</a>
@@ -113,11 +112,11 @@
     <!-- ***** Welcome Area End ***** -->
 
     <!-- ***** Service Area Start ***** -->
-    <section class="mosh-service-area clearfix">
+    <section class="matilau-service-area clearfix">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="mosh-service-slides owl-carousel">
+                    <div class="matilau-service-slides owl-carousel">
                         <!-- Single Service Area -->
                         <div class="single-service-area text-center">
                             <h2>01.</h2>
@@ -158,7 +157,7 @@
                 </div>
                 <!-- Discover More btn -->
                 <div class="col-12 text-center mt-100">
-                    <a href="#" class="btn mosh-btn">Discover More</a>
+                    <a href="#" class="btn matilau-btn">Discover More</a>
                 </div>
             </div>
         </div>
@@ -166,7 +165,7 @@
     <!-- ***** Service Area End ***** -->
 
     <!-- ***** Clients Area Start ***** -->
-    <section class="mosh-clients-area section_padding_100 clearfix">
+    <section class="matilau-clients-area section_padding_100 clearfix">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -190,7 +189,7 @@
     <!-- ***** Clients Area End ***** -->
 
     <!-- ***** Features Area Start ***** -->
-    <section class="mosh-features-area section_padding_100 clearfix">
+    <section class="matilau-features-area section_padding_100 clearfix">
         <div class="container">
             <div class="row justify-content-end">
                 <div class="col-12 col-md-6">
@@ -245,7 +244,7 @@
     <!-- ***** Feature Area End ***** -->
 
     <!-- ***** Service Area Start ***** -->
-    <section class="mosh-more-services-area d-sm-flex clearfix">
+    <section class="matilau-more-services-area d-sm-flex clearfix">
         <div class="single-more-service-area">
             <div class="more-service-content text-center wow fadeInUp" data-wow-delay=".1s">
                 <img src="img/core-img/trophy.png" alt="">
@@ -278,7 +277,7 @@
     <!-- ***** Service Area End ***** -->
 
     <!-- ***** Portfolio Area Start ***** -->
-    <section class="mosh-portfolio-area section_padding_100_0 clearfix">
+    <section class="matilau-portfolio-area section_padding_100_0 clearfix">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -290,7 +289,7 @@
             </div>
         </div>
 
-        <div class="mosh-projects-menu">
+        <div class="matilau-projects-menu">
             <div class="text-center portfolio-menu">
                 <p class="active" data-filter="*">All</p>
                 <p data-filter=".gd">Graphic Design</p>
@@ -301,7 +300,7 @@
             </div>
         </div>
 
-        <div class="mosh-portfolio">
+        <div class="matilau-portfolio">
             <!-- Single gallery Item Start -->
             <div class="single_gallery_item gd">
                 <img src="img/portfolio-img/1.jpg" alt="">
@@ -387,7 +386,7 @@
     <!-- ***** Portfolio Area End ***** -->
 
     <!-- ***** Workflow Area Start ***** -->
-    <section class="mosh-workflow-area section_padding_100_0 clearfix">
+    <section class="matilau-workflow-area section_padding_100_0 clearfix">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -407,7 +406,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <div class="mosh-workflow-slides owl-carousel">
+                        <div class="matilau-workflow-slides owl-carousel">
                             <!-- Single Service Area -->
                             <div class="single-workflow-area d-flex">
                                 <h2>1.</h2>
@@ -449,7 +448,7 @@
     <!-- ***** Service Area End ***** -->
 
     <!-- ***** CTA Area Start ***** -->
-    <section class="mosh-call-to-action-area bg-img bg-overlay section_padding_100" style="background-image: url(img/bg-img/cta.jpg);">
+    <section class="matilau-call-to-action-area bg-img bg-overlay section_padding_100" style="background-image: url(img/bg-img/cta.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -457,7 +456,7 @@
                         <div class="section-heading">
                             <p>give us a shout</p>
                             <h2>Are you Ready to have a Talk?</h2>
-                            <a href="contact.html" class="btn mosh-btn">Contact Us</a>
+                            <a href="contact.html" class="btn matilau-btn">Contact Us</a>
                         </div>
                     </div>
                 </div>
