--- a/PAGINA WEB/elements.html
+++ b/PAGINA WEB/elements.html
@@ -25,7 +25,7 @@
 <body>
     <!-- ***** Preloader Start ***** -->
     <div id="preloader">
-        <div class="mosh-preloader"></div>
+        <div class="matilau-preloader"></div>
     </div>
 
     <!-- ***** Header Area Start ***** -->
@@ -40,14 +40,14 @@
                             <a class="navbar-brand" href="index.html"><img src="img/core-img/logo.png" alt="logo"></a>
 
                             <!-- Menu Area -->
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mosh-navbar" aria-controls="mosh-navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#matilau-navbar" aria-controls="matilau-navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
-                            <div class="collapse navbar-collapse justify-content-end" id="mosh-navbar">
+                            <div class="collapse navbar-collapse justify-content-end" id="matilau-navbar">
                                 <ul class="navbar-nav animated" id="nav">
                                     <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="moshDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
-                                        <div class="dropdown-menu" aria-labelledby="moshDropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="matilauDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
+                                        <div class="dropdown-menu" aria-labelledby="matilauDropdown">
                                             <a class="dropdown-item" href="index.html">Home</a>
                                             <a class="dropdown-item" href="about.html">About Us</a>
                                             <a class="dropdown-item" href="services.html">Services</a>
@@ -90,7 +90,7 @@
     <!-- ***** Header Area End ***** -->
 
     <!-- ***** Breadcumb Area Start ***** -->
-    <div class="mosh-breadcumb-area" style="background-image: url(img/core-img/breadcumb.png);">
+    <div class="matilau-breadcumb-area" style="background-image: url(img/core-img/breadcumb.png);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -120,10 +120,10 @@
                         <h2>Buttons</h2>
                     </div>
                     <!-- Selene Button -->
-                    <div class="mosh-buttons-area mb-100">
-                        <a href="#" class="btn mosh-btn">Discover More</a>
-                        <a href="#" class="btn mosh-btn mosh-btn-2">Discover More</a>
-                        <a href="#" class="btn mosh-btn mosh-btn-3">Discover More</a>
+                    <div class="matilau-buttons-area mb-100">
+                        <a href="#" class="btn matilau-btn">Discover More</a>
+                        <a href="#" class="btn matilau-btn matilau-btn-2">Discover More</a>
+                        <a href="#" class="btn matilau-btn matilau-btn-3">Discover More</a>
                     </div>
                 </div>
 
@@ -262,7 +262,7 @@
                 </div>
 
                 <div class="col-12">
-                    <div class="mosh-cool-facts-area mb-100">
+                    <div class="matilau-cool-facts-area mb-100">
                         <div class="row">
                             <!-- Single Cool Fact-->
                             <div class="col-12 col-sm-6 col-md-3">
