--- a/PAGINA WEB/services.html
+++ b/PAGINA WEB/services.html
@@ -25,7 +25,7 @@
 <body>
     <!-- ***** Preloader Start ***** -->
     <div id="preloader">
-        <div class="mosh-preloader"></div>
+        <div class="matilau-preloader"></div>
     </div>
 
     <!-- ***** Header Area Start ***** -->
@@ -40,14 +40,14 @@
                             <a class="navbar-brand" href="index.html"><img src="img/core-img/logo.png" alt="logo"></a>
 
                             <!-- Menu Area -->
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mosh-navbar" aria-controls="mosh-navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#matilau-navbar" aria-controls="matilau-navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
-                            <div class="collapse navbar-collapse justify-content-end" id="mosh-navbar">
+                            <div class="collapse navbar-collapse justify-content-end" id="matilau-navbar">
                                 <ul class="navbar-nav animated" id="nav">
                                     <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="moshDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
-                                        <div class="dropdown-menu" aria-labelledby="moshDropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="matilauDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
+                                        <div class="dropdown-menu" aria-labelledby="matilauDropdown">
                                             <a class="dropdown-item" href="index.html">Home</a>
                                             <a class="dropdown-item" href="about.html">About Us</a>
                                             <a class="dropdown-item" href="services.html">Services</a>
@@ -90,7 +90,7 @@
     <!-- ***** Header Area End ***** -->
 
     <!-- ***** Breadcumb Area Start ***** -->
-    <div class="mosh-breadcumb-area" style="background-image: url(img/core-img/breadcumb.png);">
+    <div class="matilau-breadcumb-area" style="background-image: url(img/core-img/breadcumb.png);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -110,7 +110,7 @@
     <!-- ***** Breadcumb Area End ***** -->
 
     <!-- ***** Services Area Start ***** -->
-    <section class="mosh--services-area section_padding_100">
+    <section class="matilau--services-area section_padding_100">
         <div class="container">
             <div class="row">
                 <!-- Single Feature Area -->
@@ -225,7 +225,7 @@
 
             <div class="row">
                 <div class="col-12 text-center">
-                    <a href="#" class="btn mosh-btn">Read More</a>
+                    <a href="#" class="btn matilau-btn">Read More</a>
                 </div>
             </div>
         </div>
@@ -233,7 +233,7 @@
     <!-- ***** Services Area End ***** -->
 
     <!-- ***** Testimonials Area Start ***** -->
-    <section class="mosh-clients-testimonials-area section_padding_100">
+    <section class="matilau-clients-testimonials-area section_padding_100">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -316,7 +316,7 @@
     <!-- ***** Testimonials Area End ***** -->
 
     <!-- ***** Cool Facts Area Start ***** -->
-    <section class="mosh-cool-facts-area service-page bg-img section_padding_100" style="background-image: url(img/core-img/breadcumb.png);">
+    <section class="matilau-cool-facts-area service-page bg-img section_padding_100" style="background-image: url(img/core-img/breadcumb.png);">
         <div class="container">
             <div class="row">
                 <!-- Single Cool Fact-->
@@ -422,7 +422,7 @@
     </section>
     <!-- ***** Service Skills Area End ***** -->
 
-    <section class="mosh-subscribe-newsletter-area bg-img bg-overlay-white section_padding_100" style="background-image: url(img/bg-img/sub-1.jpg);">
+    <section class="matilau-subscribe-newsletter-area bg-img bg-overlay-white section_padding_100" style="background-image: url(img/bg-img/sub-1.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-12">
