--- a/PAGINA WEB/index.html
+++ b/PAGINA WEB/index.html
@@ -551,11 +551,9 @@
                     <div class="col-12 h-100">
                         <div class="footer-bottom-content h-100 d-md-flex justify-content-between align-items-center">
                             <div class="copyright-text">
-                                <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-</p>
+                                <p>Copyright &copy; 2018 All rights reserved | This page is made by <a href="http://lmgtfy.com/?q=porno%20gay%20entre%20viejos" target="_blank">Tu puta madre en una bicicleta sin asiento.</a></p>
                             </div>
+                            <!--
                             <div class="footer-social-info">
                                 <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
                                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -564,6 +562,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                                 <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
                                 <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                             </div>
+                            -->
                         </div>
                     </div>
                 </div>
