--- a/PAGINA WEB/index.html
+++ b/PAGINA WEB/index.html
@@ -8,7 +8,7 @@
 
     <!-- CSS -->
     <link rel="icon" href="img/core-img/favicon.ico">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
 
 </head>
