--- a/PAGINA WEB/index.html
+++ b/PAGINA WEB/index.html
@@ -12,7 +12,7 @@
     <link href="css/responsive.css" rel="stylesheet">
 
 </head>
-<body>
+<body style="background:black">
     <!-- ***** Preloader Start ***** -->
     <div id="preloader">
             <div class="matilau-preloader"></div>
@@ -22,10 +22,12 @@
         <div class="matilau-cabecera"></div>
     </div>
 
+    <br><br><br><br>
 
 
-        <section class="welcome_area clearfix" id="home" style="background-image: url(img/bg-img/welcome-bg.png)">
-            <div class="hero-slides owl-carousel">
+
+        <section class="welcome_area clearfix" id="home" style="background-image: url(img/Fondo_1.jpg); background-size: 100% 100%;">
+            <div class="slides-automatico owl-carousel">
                 <!-- Single Hero Slides -->
                 <div class="single-hero-slide d-flex align-items-end justify-content-center">
                     <div class="hero-slide-content text-center">
