--- a/PAGINA WEB/index_nop.html
+++ b/PAGINA WEB/index_nop.html
@@ -90,7 +90,7 @@
 
     <!-- ***** Welcome Area Start ***** -->
     <section class="welcome_area clearfix" id="home" style="background-image: url(img/bg-img/welcome-bg.png)">
-        <div class="hero-slides owl-carousel">
+        <div class="slides-automatico owl-carousel">
             <!-- Single Hero Slides -->
             <div class="single-hero-slide d-flex align-items-end justify-content-center">
                 <div class="hero-slide-content text-center">
