--- a/PAGINA WEB/index.html
+++ b/PAGINA WEB/index.html
@@ -26,7 +26,7 @@
 
 
 
-        <section class="welcome_area clearfix" id="home" style="background-image: url(img/Fondo_1.jpg); background-size: 100% 100%;">
+        <section class="welcome_area clearfix fondo-1" id="home"">
             <div class="slides-automatico owl-carousel">
                 <!-- Single Hero Slides -->
                 <div class="single-hero-slide d-flex align-items-end justify-content-center">
